# kurs5

./: pyproject.toml
src/: DBManager.py  README.md  config.py  database.ini  db.py  func.py  main.py
